Work around compat issues with https://github.com/DrexHD/AntiXray
Caused by https://github.com/DrexHD/AntiXray/blob/849c931e68f4b3c2984edb10a29e2b052f4755cc/common/src/main/java/me/drex/antixray/common/mixin/PalettedContainer%24DataMixin.java#L34 expecting certain custom to be present